lustre-collector/src/mds/snapshots/lustre_collector__mds__client_count_parser__test__export_param.snap
---
source: lustre-collector/src/mds/client_count_parser.rs
expression: result
---
(
    "es01a-MDT0000",
    "",
)
