lustre-collector/src/mds/snapshots/lustre_collector__mds__client_count_parser__test__mgt_client_count_parser.snap
---
source: lustre-collector/src/mds/client_count_parser.rs
expression: result
---
(
    [
        Target(
            ConnectedClients(
                TargetStat {
                    kind: Mgt,
                    param: Param(
                        "connected_clients",
                    ),
                    target: Target(
                        "MGS",
                    ),
                    value: 2,
                },
            ),
        ),
    ],
    "",
)
