lustre-collector/src/mds/snapshots/lustre_collector__mds__client_count_parser__test__mgt_interface.snap
---
source: lustre-collector/src/mds/client_count_parser.rs
expression: result
---
(
    "MGS",
    "",
)
