lustre-collector/src/mds/snapshots/lustre_collector__mds__client_count_parser__test__mixed_targets_with_multiline_uuid.snap
---
source: lustre-collector/src/mds/client_count_parser.rs
expression: result
---
(
    [
        Target(
            ConnectedClients(
                TargetStat {
                    kind: Mdt,
                    param: Param(
                        "connected_clients",
                    ),
                    target: Target(
                        "fs-MDT0000",
                    ),
                    value: 1,
                },
            ),
        ),
        Target(
            ConnectedClients(
                TargetStat {
                    kind: Ost,
                    param: Param(
                        "connected_clients",
                    ),
                    target: Target(
                        "fs-OST0000",
                    ),
                    value: 0,
                },
            ),
        ),
        Target(
            ConnectedClients(
                TargetStat {
                    kind: Ost,
                    param: Param(
                        "connected_clients",
                    ),
                    target: Target(
                        "fs-OST0001",
                    ),
                    value: 0,
                },
            ),
        ),
    ],
    "",
)
